Source/WebCore/platform/audio/MultiChannelResampler.h
@@ -59,6 +59,7 @@ private:
 
     class ChannelProvider;
     std::unique_ptr<ChannelProvider> m_channelProvider;
+    size_t m_outputFramesReady { 0 };
 };
 
 } // namespace WebCore
